# sil-kit-adapters-byte-stream-socket

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: build-linux-and-windows-release.yml  trigger-adapters-ci.yaml  trigger-pkg-workflow.yaml  trigger-ska-integration-tests.yaml  trigger-ska-quality-checks.yaml
adapter/: CMakeLists.txt  SilKitAdapterByteStreamSocket.cpp  SilKitAdapterByteStreamSocket.hpp
demos/: CMakeLists.txt  SilKitConfig_Adapter.silkit.yaml  SilKitDemoByteStreamSocketAutoSender.cpp
demos/CANoe/: Bytestream.cfg  Bytestream_observer.cfg  Bytestream_observer.stcfg  Datasources.vcdl  Datasources_observer.vCDL  ProjectSettings.vtesettings  Report_Test_Configuration.vtestreport
demos/CANoe/.run/Bytestream_observer/7uq1ctj6lfip/: __CANoeReportFuntionsLib.cin  __CaplGeneratorLib.cin  __VariablesLib.cin  testBytestreamSocketEchoDemo.cbf  testBytestreamSocketEchoDemo.vtt  testBytestreamSocketEchoDemo.vxtx  testBytestreamSocketEchoDemo.vxtx.can  testBytestreamSocketEchoDemo.vxtx.cbf
demos/CANoe/.run/Bytestream_observer/7uq1ctj6lfip/__ExpTbl_/: testBytestreamSocketEchoDemo.can.export.xml
demos/CANoe/_COData_Bytestream_observer/: DataSources.xml  Working_00002.vCODM
demos/CANoe/tests/: testBytestreamSocketEchoDemo.can  testBytestreamSocketEchoDemo.vtesttree.yaml
demos/CANoe4SW_SE/: createEnvForLinux.ps1  createEnvironment.sh  run.ps1  run.sh  run_all.ps1  run_all.sh  venvironment.yaml
demos/tests/: testBytestreamSocketEchoDemo.can  testBytestreamSocketEchoDemo.vtesttree.yaml  testBytestreamSocketEchoDemo.vtestunit.yaml
docs/man/: CMakeLists.txt  sil-kit-adapter-byte-stream-socket.1
tools/: echo_server.ps1  echo_server.sh  socat.ps1
